@@ -3,14 +3,13 @@ package nl.naturalis.common;
 import java.util.*;
 import java.util.stream.Collectors;
 import org.junit.Test;
-import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
+import static nl.naturalis.common.ObjectMethods.e2nEqualsRecursive;
 
 public class ObjectMethodsTest {
 
-  // Just to make sure we know Java
-  @Test
+  @Test // Just to make sure we understand Java
   @SuppressWarnings("unlikely-arg-type")
   public void test01() {
     int[] ints = new int[] {1, 2, 3, 4, 5};
@@ -32,33 +31,22 @@ public class ObjectMethodsTest {
   }
 
   @Test
-  @SuppressWarnings("rawtypes")
-  public void setsEquals() {
-    Object test = new Object();
-    Set set1 = setOf("a", 1, test, "", new ArrayList());
-    Set set2 = (Set) set1.stream().collect(Collectors.toSet());
-    Set set3 = (Set) set1.stream().filter(ObjectMethods::notEmpty).collect(Collectors.toSet());
-    assertEquals(set1, set2);
-    assertEquals(setOf("a", 1, test), set3);
-  }
-
-  @Test
   public void e2nEqualsRecursive_01() {
-    assertTrue("01", ObjectMethods.e2nEqualsRecursive("", null));
-    assertTrue("02", ObjectMethods.e2nEqualsRecursive(null, ""));
-    assertTrue("03", ObjectMethods.e2nEqualsRecursive(null, new Enum[0]));
-    assertTrue("04", ObjectMethods.e2nEqualsRecursive(new int[0], null));
-    assertTrue("05", ObjectMethods.e2nEqualsRecursive(new String[0], null));
-    assertTrue("06", ObjectMethods.e2nEqualsRecursive(new String[0], null));
-    assertTrue("07", ObjectMethods.e2nEqualsRecursive(Collections.emptyList(), null));
-    assertTrue("08", ObjectMethods.e2nEqualsRecursive(null, new HashSet<>()));
-    assertTrue("09", ObjectMethods.e2nEqualsRecursive(null, null));
-    assertTrue("10", ObjectMethods.e2nEqualsRecursive("", ""));
-    assertTrue("11", ObjectMethods.e2nEqualsRecursive(List.of(1, 2, 3, 4, 5), List.of(1, 2, 3, 4, 5)));
-    assertTrue("12", ObjectMethods.e2nEqualsRecursive(new String[] {"To", "be", "or", "not"}, new String[] {"To", "be", "or", "not"}));
-    assertTrue("13", ObjectMethods.e2nEqualsRecursive(new int[] {1, 2, 3, 4, 5}, new int[] {1, 2, 3, 4, 5}));
-    assertFalse("14", ObjectMethods.e2nEqualsRecursive(new int[0], new HashSet<>()));
-    assertFalse("15", ObjectMethods.e2nEqualsRecursive("", new HashSet<>()));
+    assertTrue("01", e2nEqualsRecursive("", null));
+    assertTrue("02", e2nEqualsRecursive(null, ""));
+    assertTrue("03", e2nEqualsRecursive(null, new Enum[0]));
+    assertTrue("04", e2nEqualsRecursive(new int[0], null));
+    assertTrue("05", e2nEqualsRecursive(new String[0], null));
+    assertTrue("06", e2nEqualsRecursive(new String[0], null));
+    assertTrue("07", e2nEqualsRecursive(Collections.emptyList(), null));
+    assertTrue("08", e2nEqualsRecursive(null, new HashSet<>()));
+    assertTrue("09", e2nEqualsRecursive(null, null));
+    assertTrue("10", e2nEqualsRecursive("", ""));
+    assertTrue("11", e2nEqualsRecursive(List.of(1, 2, 3, 4, 5), List.of(1, 2, 3, 4, 5)));
+    assertTrue("12", e2nEqualsRecursive(new String[] {"To", "be", "or", "not"}, new String[] {"To", "be", "or", "not"}));
+    assertTrue("13", e2nEqualsRecursive(new int[] {1, 2, 3, 4, 5}, new int[] {1, 2, 3, 4, 5}));
+    assertFalse("14", e2nEqualsRecursive(new int[0], new HashSet<>()));
+    assertFalse("15", e2nEqualsRecursive("", new HashSet<>()));
   }
 
   @Test // behaviour with sets
@@ -81,42 +69,23 @@ public class ObjectMethodsTest {
     Set subset6 = setOf(subsubset4);
     Set subset7 = setOf(subsubset5);
 
-    assertFalse("01", ObjectMethods.e2nEqualsRecursive(subsubset1, subsubset2));
-    assertTrue("02", ObjectMethods.e2nEqualsRecursive(subsubset2, subsubset3));
-    assertTrue("03", ObjectMethods.e2nEqualsRecursive(subsubset4, subsubset5));
-    assertFalse("04", ObjectMethods.e2nEqualsRecursive(subsubset5, subsubset6));
-    assertFalse("05", ObjectMethods.e2nEqualsRecursive(subsubset5, subsubset7));
+    assertFalse("01", e2nEqualsRecursive(subsubset1, subsubset2));
+    assertTrue("02", e2nEqualsRecursive(subsubset2, subsubset3));
+    assertTrue("03", e2nEqualsRecursive(subsubset4, subsubset5));
+    assertFalse("04", e2nEqualsRecursive(subsubset5, subsubset6));
+    assertFalse("05", e2nEqualsRecursive(subsubset5, subsubset7));
 
-    assertFalse("06", ObjectMethods.e2nEqualsRecursive(subset1, subset2));
-    assertFalse("07", ObjectMethods.e2nEqualsRecursive(subset2, subset4));
-    assertTrue("08", ObjectMethods.e2nEqualsRecursive(subset3, subset4));
-    assertFalse("09", ObjectMethods.e2nEqualsRecursive(subset4, subset5));
-    assertTrue("10", ObjectMethods.e2nEqualsRecursive(subset6, subset7));
+    assertFalse("06", e2nEqualsRecursive(subset1, subset2));
+    assertFalse("07", e2nEqualsRecursive(subset2, subset4));
+    assertTrue("08", e2nEqualsRecursive(subset3, subset4));
+    assertFalse("09", e2nEqualsRecursive(subset4, subset5));
+    assertTrue("10", e2nEqualsRecursive(subset6, subset7));
 
   }
 
   @SuppressWarnings("rawtypes")
   private static Set setOf(Object... objs) {
     return Arrays.stream(objs).collect(Collectors.toSet());
-  }
-
-  @Test // implicitly also tests ObjectMethods.hashCode
-  public void e2nHash() {
-    assertEquals("01",
-        ObjectMethods.e2nHash(null, 5, "hallo", null),
-        ObjectMethods.e2nHash(null, 5, "hallo", null));
-    assertEquals("02",
-        ObjectMethods.e2nHash(null, 5, "hallo", null),
-        ObjectMethods.e2nHash(Collections.emptyList(), 5, "hallo", Collections.emptySet()));
-    assertEquals("03",
-        ObjectMethods.e2nHash(null, 5, "hallo", null),
-        ObjectMethods.e2nHash(new int[0], 5, "hallo", new Enum[0]));
-    // Ouch, surprise (but true):
-    assertEquals("04",
-        ObjectMethods.e2nHash(Collections.emptyList(), 5, "hallo", Collections.emptySet()),
-        ObjectMethods.e2nHash(new int[0], 5, "hallo", new Enum[0]));
-    assertEquals("05", 0, ObjectMethods.e2nHash());
-    assertEquals("06", 0, ObjectMethods.e2nHash((Object[]) null));
   }
 
 }
